// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileWidget > renders a file widget component with value 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-default-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="file-widget-dropzone"
            tabindex="0"
          >
            <img
              class="ui small image image-preview"
              id="field-my-field-image"
              src="http://myfile?id=0"
            />
            <label
              class="label-file-widget-input"
            >
              Replace existing file
            </label>
            <input
              autocomplete="off"
              id="field-my-field"
              multiple=""
              name="my-field"
              style="display: none;"
              tabindex="-1"
              type="file"
            />
          </div>
          <div
            class="field-file-name"
          >
            <a
              class="external"
              href="http://myfile"
              rel="noopener noreferrer"
              target="_blank"
            >
              myfile
            </a>
            <button
              aria-label="delete file"
              class="ui basic icon button delete-button"
              type="button"
            >
              <svg
                class="icon"
                style="height: 20px; width: auto; fill: currentColor;"
                viewBox="0 0 36 36"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill-rule="evenodd"
                >
                  <path
                    d="M27,30 C27,30.552 26.551,31 26,31 L12,31 C11.449,31 11,30.552 11,30 L11,9 L27,9 L27,30 Z M19,5 C20.103,5 21,5.897 21,7 L17,7 C17,5.897 17.897,5 19,5 L19,5 Z M31,7 L23,7 C23,4.794 21.206,3 19,3 C16.794,3 15,4.794 15,7 L7,7 L7,9 L9,9 L9,30 C9,31.654 10.346,33 12,33 L26,33 C27.654,33 29,31.654 29,30 L29,9 L31,9 L31,7 Z"
                  />
                  <polygon
                    points="15 28 17 28 17 12 15 12"
                  />
                  <polygon
                    points="21 28 23 28 23 12 21 12"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileWidget > renders a file widget component with value in raw data 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-default-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="file-widget-dropzone"
            tabindex="0"
          >
            <img
              class="ui small image image-preview"
              id="field-my-field-image"
              src="data:image/png;base64,oiweurtksdgfjaslfqw9523563456"
            />
            <label
              class="label-file-widget-input"
            >
              Replace existing file
            </label>
            <input
              autocomplete="off"
              id="field-my-field"
              multiple=""
              name="my-field"
              style="display: none;"
              tabindex="-1"
              type="file"
            />
          </div>
          <div
            class="field-file-name"
          >
            <a
              class="external"
              rel="noopener noreferrer"
              target="_blank"
            >
              myfile
            </a>
            <button
              aria-label="delete file"
              class="ui basic icon button delete-button"
              type="button"
            >
              <svg
                class="icon"
                style="height: 20px; width: auto; fill: currentColor;"
                viewBox="0 0 36 36"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill-rule="evenodd"
                >
                  <path
                    d="M27,30 C27,30.552 26.551,31 26,31 L12,31 C11.449,31 11,30.552 11,30 L11,9 L27,9 L27,30 Z M19,5 C20.103,5 21,5.897 21,7 L17,7 C17,5.897 17.897,5 19,5 L19,5 Z M31,7 L23,7 C23,4.794 21.206,3 19,3 C16.794,3 15,4.794 15,7 L7,7 L7,9 L9,9 L9,30 C9,31.654 10.346,33 12,33 L26,33 C27.654,33 29,31.654 29,30 L29,9 L31,9 L31,7 Z"
                  />
                  <polygon
                    points="15 28 17 28 17 12 15 12"
                  />
                  <polygon
                    points="21 28 23 28 23 12 21 12"
                  />
                </g>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileWidget > renders an empty file widget component 1`] = `
<div>
  <div
    class="inline field field-wrapper-my-field"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-my-field"
              id="fieldset-default-field-label-my-field"
            >
              My field
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="field-file-name"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
